[Collapse/expand services widget] Fixed: paddings, text, and popup size

--- a/css/main.css
+++ b/css/main.css
@@ -5484,48 +5484,76 @@ body.loaded:after{
   position: fixed;
   width: 0;
   background: #ececec;
-  top: 139px;
+  top: 165px;
   right: 36px;
   padding: 0;
-  border: 0px solid transparent;
+  border: 0;
   -ms-filter: none;
   -moz-box-shadow: none;
   -webkit-box-shadow: none;
   box-shadow: none;
 
 
-  -webkit-transition: width 0.5s ease-in-out, box-shadow 0.5s ease-in-out, border 0.5s ease-in-out;
-	-moz-transition: width 0.5s ease-in-out, box-shadow 0.5s ease-in-out, border 0.5s ease-in-out;
-	-o-transition: width 0.5s ease-in-out, box-shadow 0.5s ease-in-out, border 0.5s ease-in-out;
-	transition: width 0.5s ease-in-out, box-shadow 0.5s ease-in-out, border 0.5s ease-in-out;
+  -webkit-transition: width 0.5s ease-in-out, border 0.5s ease-in-out;
+	-moz-transition: width 0.5s ease-in-out, border 0.5s ease-in-out;
+	-o-transition: width 0.5s ease-in-out, border 0.5s ease-in-out;
+	transition: width 0.5s ease-in-out, border 0.5s ease-in-out;
 
   z-index: 999999;
 }
 
 .sticky-info-services.visible{
-  width: 370px;
+  width: 300px;
   height: auto;
-  border: 1px solid #d1d2d3;
   box-shadow: 0px 2px 10px 1px rgba(0, 0, 0, 0.28);
 }
 
-.sticky-info-services.visible:hover{
-  box-shadow: 0px 2px 12px 1px rgba(0, 0, 0, 0.5);
-  border: 1px solid #999999;
+.sticky-info-services .sticky-header-img:before{
+  position: absolute;
+  bottom: -5px;
+  content: "";
+  width: 0;
+  height: 5px;
+  background: #3BA749;
+  left: 50%;
+  right: 50%;
+
+  -webkit-transition: width 0.2s ease-in-out, left 0.2s ease-in-out, right 0.2s ease-in-out;
+  -moz-transition: width 0.2s ease-in-out, left 0.2s ease-in-out, right 0.2s ease-in-out;
+  -o-transition: width 0.2s ease-in-out, left 0.2s ease-in-out, right 0.2s ease-in-out;
+  transition: width 0.2s ease-in-out, left 0.2s ease-in-out, right 0.2s ease-in-out;
+}
+
+.sticky-info-services .sticky-info-content:hover .sticky-header-img:before{
+  position: absolute;
+  width: 100%;
+  left: 0;
+  right: 0;
 }
 
 .sticky-info-services .sticky-info-content{
   overflow: hidden;
 }
 
+.sticky-info-content{
+  -webkit-transition: width 0.5s ease-in-out, background 0.2s ease-in-out, border 0.5s ease-in-out;
+	-moz-transition: width 0.5s ease-in-out, background 0.2s ease-in-out, border 0.5s ease-in-out;
+	-o-transition: width 0.5s ease-in-out, background 0.2s ease-in-out, border 0.5s ease-in-out;
+	transition: width 0.5s ease-in-out, background 0.2s ease-in-out, border 0.5s ease-in-out;
+}
+
+.sticky-info-content:hover{
+  background: #ffffff;
+}
+
 .sticky-info-content .info-text{
-    padding: 20px 20px 5px 20px;
-    height: 125px;
+    padding: 30px 20px;
+    height: 140px;
     width: 350px;
 }
 
 .sticky-info-services img{
-  width: 370px;
+  width: 300px;
   height: auto;
   display: block;
   -webkit-user-select: none;
@@ -5541,7 +5569,7 @@ body.loaded:after{
 
 .sticky-info-services .sticky-handle{
   position: fixed;
-  top: 140px;
+  top: 165px;
   right: 0;
   content: "";
   width: 36px;
